objects/SVMXC__PM_Schedule_Definition__c.object
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>Time based schedules for PM Plan are defined here.</description>
    <fields>
        <fullName>SVMXC__Frequency_Unit__c</fullName>
        <description>Unit of frequency in the condition rule - Count, Days, Month, Year</description>
        <label>Frequency Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Months</fullName>
                </value>
                <value>
                    <fullName>Weeks</fullName>
                </value>
                <value>
                    <fullName>Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Frequency__c</fullName>
        <label>Frequency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__PM_Plan__c</fullName>
        <label>PM Plan</label>
        <referenceTo>SVMXC__PM_Plan__c</referenceTo>
        <relationshipLabel>PM Schedule Definition</relationshipLabel>
        <relationshipName>PM_Schedule_Definition</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SVMXC__Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Recurring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recurring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Adjusted_Units__c</fullName>
        <description>Unit of measurement by which schedules are adjusted - Count in case of technical attributes, Days /Month / Year in case of date attributes</description>
        <inlineHelpText>Unit of measurement by which schedules are adjusted - Count in case of technical attributes, Days /Month / Year in case of date attributes</inlineHelpText>
        <label>Adjusted Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Weeks</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Count</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Adjusted_Value__c</fullName>
        <description>Value by which PM schedules are adjusted</description>
        <inlineHelpText>Value by which PM schedules are adjusted</inlineHelpText>
        <label>Adjusted Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Adjustment_Type__c</fullName>
        <description>Type of adjustment for condition based PM - Fixed or Actual</description>
        <inlineHelpText>Type of adjustment for condition based PM - Fixed or Actual</inlineHelpText>
        <label>Adjustment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Actual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Attr_Data_type__c</fullName>
        <description>Data type of Attribute chosen, used for internal purpose</description>
        <inlineHelpText>Data type of Attribute chosen, used for internal purpose</inlineHelpText>
        <label>Attr Data type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Attribute_Field__c</fullName>
        <label>Attribute Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Attribute_Type__c</fullName>
        <description>Type of attribute in Condition Based PM - Schema also refers to fields on Installed Product or Technical also refers to technical attributes</description>
        <inlineHelpText>Type of attribute in Condition Based PM - Schema also refers to fields on Installed Product or Technical also refers to technical attributes</inlineHelpText>
        <label>Attribute Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Schema</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Max_Activity_Changed__c</fullName>
        <label>Max Activity Changed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Min_Activity_Changed__c</fullName>
        <label>Min Activity Changed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Operator__c</fullName>
        <description>Operator used in Condition rules</description>
        <inlineHelpText>Operator used in Condition rules</inlineHelpText>
        <label>Operator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_PM_Coverage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Preventive Maintenance coverage record</description>
        <inlineHelpText>Lookup to Preventive Maintenance coverage record</inlineHelpText>
        <label>PM Coverage</label>
        <referenceTo>SVMXC__PM_Coverage__c</referenceTo>
        <relationshipLabel>PM Schedule Definition (PM Coverage)</relationshipLabel>
        <relationshipName>PM_Schedule_Definition1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Sequence__c</fullName>
        <description>Sequence number of PM schedule</description>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Start_At__c</fullName>
        <description>Start value of condition rule.</description>
        <inlineHelpText>Start value of condition rule.</inlineHelpText>
        <label>Start At</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Stop_At__c</fullName>
        <description>Stop value of condition rule.</description>
        <inlineHelpText>Stop value of condition rule.</inlineHelpText>
        <label>Stop At</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Threshold_Type__c</fullName>
        <description>Type of threshold, used for internal purpose</description>
        <inlineHelpText>Type of threshold, used for internal purpose</inlineHelpText>
        <label>Threshold Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Picklist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Threshold__c</fullName>
        <description>Percentage value multiplied by the frequency to obtain the lower limit to trigger the work order. This is to enable creating a PM Work order ahead of reaching the counter value.</description>
        <inlineHelpText>Percentage value multiplied by the frequency to obtain the lower limit to trigger the work order. This is to enable creating a PM Work order ahead of reaching the counter value.</inlineHelpText>
        <label>Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Schedule_Type__c</fullName>
        <label>Schedule Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Time Based</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Visit_Description__c</fullName>
        <label>Visit Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Work_Order_Purpose__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order Purpose</label>
        <referenceTo>SVMXC__Task_Template__c</referenceTo>
        <relationshipLabel>PM Schedule Definition</relationshipLabel>
        <relationshipName>PM_Schedule_Definition</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PM Schedule Definition</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PM Schedule Definition</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>